--- a/RegularSelection/test/Base.lproj/Main.storyboard
+++ b/RegularSelection/test/Base.lproj/Main.storyboard
@@ -38,6 +38,14 @@
                                             <rect key="frame" x="0.0" y="0.0" width="85" height="84"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uF1-Wj-4Ai">
+                                                    <rect key="frame" x="17.5" y="17" width="50" height="50"/>
+                                                    <color key="backgroundColor" red="1" green="0.30872617429999999" blue="0.17401843089999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="Msu-dg-9fy"/>
+                                                        <constraint firstAttribute="height" constant="50" id="RqR-ni-G7S"/>
+                                                    </constraints>
+                                                </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dateHere" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AA5-3s-fjv">
                                                     <rect key="frame" x="7" y="31.5" width="71" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -47,11 +55,14 @@
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstItem="AA5-3s-fjv" firstAttribute="centerY" secondItem="60r-fL-WQP" secondAttribute="centerY" id="XWT-yV-thq"/>
-                                            <constraint firstItem="AA5-3s-fjv" firstAttribute="centerX" secondItem="60r-fL-WQP" secondAttribute="centerX" id="h5B-hw-Fao"/>
+                                            <constraint firstItem="AA5-3s-fjv" firstAttribute="centerX" secondItem="60r-fL-WQP" secondAttribute="centerX" id="VXE-8v-4r4"/>
+                                            <constraint firstItem="uF1-Wj-4Ai" firstAttribute="centerX" secondItem="60r-fL-WQP" secondAttribute="centerX" id="YV5-lb-zhU"/>
+                                            <constraint firstItem="AA5-3s-fjv" firstAttribute="centerY" secondItem="60r-fL-WQP" secondAttribute="centerY" id="YuS-FE-v9s"/>
+                                            <constraint firstItem="uF1-Wj-4Ai" firstAttribute="centerY" secondItem="60r-fL-WQP" secondAttribute="centerY" id="un8-oX-Cpw"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="dateLabel" destination="AA5-3s-fjv" id="LmL-ff-Arh"/>
+                                            <outlet property="selectedView" destination="uF1-Wj-4Ai" id="GmV-FK-vDz"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
