--- a/RangedSelection/test/Base.lproj/Main.storyboard
+++ b/RangedSelection/test/Base.lproj/Main.storyboard
@@ -80,6 +80,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="calendarView" destination="Gdf-R9-qez" id="7Tt-ab-yf0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
